--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,58 @@
 .Typewriter__wrapper {
-    --Icon-fontSize: calc(1em* var(--joy-lineHeight-xs, 1.33334));
+    --Icon-fontSize: calc(1em * var(--joy-lineHeight-xs, 1.33334));
     margin: var(--Typography-margin, 0px);
-    font-family: var(--joy-fontFamily-display, "Inter", var(--joy-fontFamily-fallback, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"));
+    font-family: var(
+        --joy-fontFamily-display,
+        'Inter',
+        var(
+            --joy-fontFamily-fallback,
+            -apple-system,
+            BlinkMacSystemFont,
+            'Segoe UI',
+            Roboto,
+            Helvetica,
+            Arial,
+            sans-serif,
+            'Apple Color Emoji',
+            'Segoe UI Emoji',
+            'Segoe UI Symbol'
+        )
+    );
     line-height: var(--joy-lineHeight-xs, 1.33334);
     letter-spacing: -0.025em;
     font-weight: var(--joy-fontWeight-xl);
     font-size: clamp(1.875rem, 1.3636rem + 2.1818vw, 3rem);
     margin: var(--Typography-margin, 0px);
     display: inline;
-    color: var(--variant-plainColor, rgba(var(--joy-palette-primary-mainChannel) / 1));
-    text-align:center;
+    color: var(
+        --variant-plainColor,
+        rgba(var(--joy-palette-primary-mainChannel) / 1)
+    );
+    text-align: center;
 }
 .Typewriter__cursor {
     font-size: clamp(1.875rem, 1.3636rem + 2.1818vw, 3rem);
-    font-family: var(--joy-fontFamily-display, "Inter", var(--joy-fontFamily-fallback, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"));
+    font-family: var(
+        --joy-fontFamily-display,
+        'Inter',
+        var(
+            --joy-fontFamily-fallback,
+            -apple-system,
+            BlinkMacSystemFont,
+            'Segoe UI',
+            Roboto,
+            Helvetica,
+            Arial,
+            sans-serif,
+            'Apple Color Emoji',
+            'Segoe UI Emoji',
+            'Segoe UI Symbol'
+        )
+    );
     font-weight: var(--joy-fontWeight-xl);
     display: inline;
 }
 .Typewriter {
-    text-align:center;
+    text-align: center;
     display: inline;
 }
